--- a/react_dashboard/dashboard/package.json
+++ b/react_dashboard/dashboard/package.json
@@ -19,6 +19,7 @@
     "react-items-carousel": "^2.8.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
